# open-vectorizer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ALGORITHM.md  EXAMPLES.md  LIMITATIONS.md
src/open_vectorizer/: __init__.py  cli.py  trace.py
tests/: test_compare_render.py  test_trace.py
tools/: compare_render.py
