[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-vectorizer"
version = "0.1.0"
description = "Open source raster logo vectorization with color grouping and smooth SVG path fitting."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Th0rgal" }]
dependencies = [
  "numpy>=1.24",
  "opencv-python-headless>=4.8",
  "pillow>=10.0",
]

[project.scripts]
open-vectorizer = "open_vectorizer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

