[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-vectorizer"
version = "0.1.0"
description = "Open source raster logo vectorization with color grouping and smooth SVG path fitting."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Th0rgal" }]
keywords = ["svg", "vectorization", "tracing", "image-processing", "opencv"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Graphics :: Graphics Conversion",
]
dependencies = [
  "numpy>=1.24",
  "opencv-python-headless>=4.8",
  "pillow>=10.0",
]

[project.urls]
Homepage = "https://github.com/Th0rgal/open-vectorizer"
Repository = "https://github.com/Th0rgal/open-vectorizer"
Issues = "https://github.com/Th0rgal/open-vectorizer/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.15",
]

[project.scripts]
open-vectorizer = "open_vectorizer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
open_vectorizer = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
